--- a/templates/clickReperto.html
+++ b/templates/clickReperto.html
@@ -14,7 +14,10 @@
             background-color: #f8f0e0; /* Sfondo chiaro simile al marmo */
             color: #5c2c2e; /* Tonalità intensa di rosso per il testo */
             font-family: 'Playfair Display', serif; /* Font classico con grazie */
-            background-image: url('https://example.com/marble-texture.jpg'); /* Immagine di sfondo che imita il marmo */
+            background-image: url('/static/sfondoArchitettonico.jpg');
+            background-size: cover;  /* Copre l'intera finestra di visualizzazione */
+            background-position: center; /* Centra l'immagine sullo schermo */
+            background-repeat: no-repeat;
         }
         .header {
             display: flex;
