Risolto immagini assenti

--- a/templates/clickReperto.html
+++ b/templates/clickReperto.html
@@ -255,7 +255,7 @@
             {% if immagini %}
             <img src="{{ immagini }}" alt="Immagine del Reperto" class="img-fluid" data-toggle="modal" data-target="#imageModal">
             {% else %}
-            <p>No image available for this artifact.</p>
+            <img src="/static/noimage.jpg" alt="Immagine del Reperto" class="img-fluid">
             {% endif %}
         </div>
         <!-- Modal per ingrandire l'immagine -->
