--- a/templates/clickReperto.html
+++ b/templates/clickReperto.html
@@ -8,6 +8,7 @@
 
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
+    <link rel="icon" href="/static/icon.ico" type="image/x-icon">
 
     <style>
         body {
