--- a/templates/result.html
+++ b/templates/result.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://js.arcgis.com/4.23/esri/themes/light/main.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://js.arcgis.com/4.23/"></script>
+    <link rel="icon" href="/static/icon.ico" type="image/x-icon">
 
     <style>
 
